--- a/3.1-arch/Dockerfile
+++ b/3.1-arch/Dockerfile
@@ -49,6 +49,7 @@ RUN HAXE_SRC_PATH="/src/haxe/" \
 RUN pacman -Syu --quiet --noconfirm --noprogressbar \
   && pacman -S --quiet --noconfirm --noprogressbar \
     nodejs \
+    npm \
   && npm install -g npm gulp-cli
 
 # Haxelib packages for Flash development
