Add `jq` and `ffmpeg` dependencies

--- a/3.1/Dockerfile
+++ b/3.1/Dockerfile
@@ -20,9 +20,11 @@ RUN pacman -Syu --quiet --noconfirm --noprogressbar \
     coreutils \
     expect \
     fakeroot \
+    ffmpeg \
     flashplugin \
     gcc \
     git \
+    jq \
     make \
     neko \
     nodejs \
